--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/bootswatch/dist/simplex/bootstrap.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/popper.js/dist/popper.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -128,4 +135,5 @@
     }
   },
   "defaultProject": "loginAPP"
+
 }
